<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrawPicture</string>
    <string name="hello_world">Hello world!</string>
    <string name="pathTest">pathTest</string>
    <string name="textTest">textText</string>
    <string name="color">颜色</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
    <string name="width">线宽</string>
    <string name="width_1">1号</string>
    <string name="width_3">3号</string>
    <string name="width_5">5号</string>
    <string name="blur">模糊</string>
    <string name="emboss">正常</string>
    <string name="pinball">小球游戏</string>
    <string name="rectangle">矩形</string>
    <string name="circle">圆形</string>
    <string name="oval">椭圆</string>
    <string name="line">直线</string>
    <string name="bn1">位图</string>
    <string name="bn2">线性渐变</string>
    <string name="bn3">圆形渐变</string>
    <string name="bn4">角度渐变</string>
    <string name="bn5">模仿</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="contentDescription">图片描述</string>

</resources>