<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:title="@string/color">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/red"
                    android:title="@string/color_red">
                </item>
                <item
                    android:id="@+id/green"
                    android:title="@string/color_green">
                </item>
                <item
                    android:id="@+id/blue"
                    android:title="@string/color_blue">
                </item>
            </group>
        </menu>
    </item>
    <item android:title="@string/width">
        <menu>
            <group>
                <item
                    android:id="@+id/width_1"
                    android:title="@string/width_1">
                </item>
                <item
                    android:id="@+id/width_3"
                    android:title="@string/width_3">
                </item>
                <item
                    android:id="@+id/width_5"
                    android:title="@string/width_5">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/blur"
        android:title="@string/blur"/>
    <item
        android:id="@+id/emboss"
        android:title="@string/emboss"/>

</menu>